Spring Boot upgraded to 3.3.2 AbstractBaseApi removed. Swagger UI enabled. Fundamental analysis indicators changed. Price info service moved to FeignClient. Caching for industryList service enabled.